--- a/projects/angular/src/forms/styles/_properties.forms.scss
+++ b/projects/angular/src/forms/styles/_properties.forms.scss
@@ -15,7 +15,7 @@
       --clr-forms-valid-color: var(--clr-color-success-700);
       --clr-forms-valid-text-color: var(--clr-color-success-900);
       --clr-forms-subtext-color: var(--clr-color-neutral-600);
-      --clr-forms-placeholder-color: var(--clr-color-neutral-600);
+      --clr-forms-placeholder-color: var(--clr-global-color-construction-600);
       --clr-forms-border-color: var(--clr-color-neutral-500);
       --clr-forms-focused-color: var(--clr-color-action-600);
 
